--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 </head>
 <body>
 <h1>Инновационная стоматология</h1>
-<p>текст</p>
+<p>В современном мире люди постоянно полчают информацию о новинках, инновационных технологиях, о различных импортных брендах.
+В пучине маркетинга, где каждый производитель выдаёт свою продукцию за наилучшую, сложно сделать правильный выбор.
+Я поставила перед собой задачу: ответить своим пациентам на самые распространённые вопросы и помочь разобраться, почему та или иная продукция необходима для поддержания здоровья зубов и ротовой полости в целом.</p>
 </body>
 </html>
